group = 'dev.fusionize'
version = '0.0.1-SNAPSHOT'
description = 'fusionize-orchestrator'

repositories {
    mavenCentral()
}

buildscript {
    ext{
        springBootVersion  = '4.0.1'
        springBootDependencyMangementVersion  = '1.1.7'
        springAiVersion = '1.0.3'
    }
}

allprojects {
    buildDir = "${rootProject.projectDir}/build${project.path.replace(':', '/')}"
}
subprojects {
    apply plugin: 'java'
    java {
        toolchain {
            languageVersion = JavaLanguageVersion.of(21)
        }
    }
    dependencies {
        testImplementation platform('org.junit:junit-bom:6.0.2')
        testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
    }
    repositories {
        mavenCentral()
    }
    tasks.named('test') {
        useJUnitPlatform()
        testLogging {
            showStandardStreams = true
        }
        jvmArgs '-XX:+EnableDynamicAgentLoading'
    }
}

tasks.register('dev') {
    group = 'fusionize'
    description = 'Run Fusionize locally'

    dependsOn ':fusionize:apps:orchestrator:bootRun'
}